src/main/k8s/prometheus-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  containers:
    - name: prometheus
      image: prom/prometheus
      volumeMounts:
          - name: prometheus-config
            mountPath: /etc/prometheus/
      command:
        - prometheus
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--web.route-prefix=/"
        - "--web.external-url=/prometheus"
  volumes:
    - name: prometheus-config
      configMap:
        name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    name: prometheus
---
apiVersion: v1
kind: Pod
metadata:
  name: grafana
  labels:
    name: grafana
spec:
  containers:
    - name: grafana
      image: grafana/grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    name: grafana
