src/main/k8s/services-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: service-a
  labels:
    name: service-a
spec:
  containers:
    - name: service-a
      image: external-service
      imagePullPolicy: Never
      volumeMounts:
          - name: service-a-config
            mountPath: /usr/src/app/config
  volumes:
    - name: service-a-config
      configMap:
        name: service-a-config
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    name: service-a
---
apiVersion: v1
kind: Pod
metadata:
  name: service-b
  labels:
    name: service-b
spec:
  containers:
    - name: service-b
      image: external-service
      imagePullPolicy: Never
      volumeMounts:
        - name: service-b-config
          mountPath: /usr/src/app/config
  volumes:
    - name: service-b-config
      configMap:
        name: service-b-config
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
  selector:
    name: service-b
