src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-resilience-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    #- host: demo-resilience.minikube
    - host: demo-resilience.local-k8s
      http:
        paths:
          - path: /api(/|$)(.*)
            backend:
              serviceName: demo-resilience
              servicePort: 8080
          - path: /service-a(/|$)(.*)
            backend:
              serviceName: service-a
              servicePort: 80
          - path: /service-b(/|$)(.*)
            backend:
              serviceName: service-b
              servicePort: 80
          - path: /prometheus(/|$)(.*)
            backend:
              serviceName: prometheus
              servicePort: 9090
          - path: /grafana(/|$)(.*)
            backend:
              serviceName: grafana
              servicePort: 3000
